--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,28 +1,26 @@
-.footer {
+.container{
+    margin: 0%;
     display: flex;
-    align-items: center;
-    margin: -0.5rem -3.5rem;
-    position: relative;
-    margin-top: -7rem;
-  }
-  .f-content {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    margin-top: 4rem;
-    gap: 4rem;
+    gap: 70px;
+    padding: 60px;
+    background-color: black;
     color: white;
-  }
-  .f-icons {
-    display: flex;
-    gap: 2rem;
-  }
-  
-  @media screen and (max-width: 480px){
-    .f-content{
-      transform: scale(.5);
+    line-height: 1.5;
+    flex-wrap: wrap;
+}
+.abc{
+    width: 300px;
+    margin-right: 200px;
+}
+@media screen and (max-width: 576px)
+{
+    .abc{
+        margin-left: 170px;
+        text-align: center;
+        justify-content: center;
+        }
+    .container{
+    text-align: center;
+    justify-content: center;
     }
-  }
+}
