--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,52 +1,98 @@
-.n-wrapper{
-    height: 10vh;
-    display: flex;
-    justify-content: space-between;
+.navbar {
+  position: sticky;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffffff;
+  padding: 1rem;
+  z-index: 1000;
 }
-.n-left{
-    display: flex;
-    align-items: center;
-    flex: 1;
-    gap: 2rem;
-}
-.n-name{
-    font-size: 1.8rem;
-    font-weight: bold;
-}
-.n-right{
-    display: flex;
-    flex: 1;
-    align-items: center;
-    justify-content: center;
-    font-weight: 400;
-}
-.n-list ul{
-    display: flex;
-    gap: 2rem;
-    margin-right: 4rem;
-    list-style: none;
-}
-.n-list ul li{
-    font-size: 1.5rem;
-}
-.n-list ul li:hover{
-    cursor: pointer;
-    color: var(--orange);
 
+.navbar-logo img {
+  height: 50px;
 }
-.n-button{
-    flex:2;
+
+.navbar-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
 }
-@media screen and (max-width: 480px) {
-    .n-list {
-      display: none;
-    }
-    .n-button{
-        display: none;
-    }
-    .blur{
-        display: none;
-    width: 8rem;
-    height: 4rem;
-    }
+
+.navbar-list li {
+  margin: 0 1rem;
+}
+
+.navbar-list a {
+  text-decoration: none;
+  color: #000000;
+}
+
+@media screen and (max-width: 768px) {
+  .navbar-list {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    background-color: #ffffff;
+    padding: 1rem;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   }
+
+  .navbar-list li {
+    margin: 1rem 0;
+  }
+
+  .navbar-list a {
+    font-size: 1.2rem;
+  }
+
+  .navbar-list.show {
+    display: flex;
+  }
+  
+  .navbar-toggle {
+    position: relative;
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1001;
+  }
+
+  .navbar-toggle span {
+    height: 2px;
+    width: 20px;
+    background-color: #000000;
+    position: absolute;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .navbar-toggle span:nth-child(1) {
+    transform: translateY(-6px);
+  }
+
+  .navbar-toggle span:nth-child(2) {
+    transform: translateY(0);
+  }
+
+  .navbar-toggle span:nth-child(3) {
+    transform: translateY(6px);
+  }
+
+  .navbar-toggle.open span:nth-child(1) {
+    transform: translateY(0) rotate(45deg);
+  }
+
+  .navbar-toggle.open span:nth-child(2) {
+    opacity: 0;
+  }
+
+  .navbar-toggle.open span:nth-child(3) {
+    transform: translateY(0) rotate(-45deg);
+  }
+}
